main/default/objects/Vehicle_Model__c/Vehicle_Model__c.object-meta.xml
<CustomObject>
    <description>List of Vehicle models</description>
    <label>Vehicle Model</label>
    <nameField>
        <label>Vehicle Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>