main/default/objects/Vehicle_Model__c/fields/Body_Style__c.field-meta.xml
<CustomField>
    <fullName>Body_Style__c</fullName>
    <description>The vehicle model body style (e.g. hatch, sedan etc)</description>
    <inlineHelpText>The vehicle model body style (e.g. hatch, sedan etc)</inlineHelpText>
    <label>Body Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>