main/default/objects/Vehicle_Model__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <description>The vehicle model drive type</description>
    <inlineHelpText>The vehicle model drive type</inlineHelpText>
    <label>Drive Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>