main/default/objects/Vehicle_Model__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <description>The vehicle model engine type</description>
    <inlineHelpText>The vehicle model engine type</inlineHelpText>
    <label>Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>