main/default/objects/Vehicle_Model__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>The vehicle model make</description>
    <inlineHelpText>The vehicle model make</inlineHelpText>
    <label>Make</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>