main/default/objects/Vehicle_Model__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The vehicle model name</description>
    <inlineHelpText>The vehicle model name</inlineHelpText>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>