main/default/objects/Vehicle_Model__c/fields/Sub_Model__c.field-meta.xml
<CustomField>
    <fullName>Sub_Model__c</fullName>
    <description>The vehicle sub model</description>
    <inlineHelpText>The vehicle sub model</inlineHelpText>
    <label>Sub Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>