main/default/objects/Vehicle_Model__c/fields/Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Tank_Capacity__c</fullName>
    <description>The vehicle model tank capacity (litre)</description>
    <inlineHelpText>The vehicle model tank capacity (litre)</inlineHelpText>
    <label>Tank Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>