main/default/objects/Vehicle_Model__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <description>The vehicle model transmission type</description>
    <inlineHelpText>The vehicle model transmission type</inlineHelpText>
    <label>Transmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>