main/default/objects/Vehicle_Model__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The vehicle model year</description>
    <inlineHelpText>The vehicle model year</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>